# ALDA_Practica

./: .gitignore  AddressBook.cpp  AddressBook.h  AddressBookV1.cpp  AddressBookV1.h  AddressBookV2.cpp  AddressBookV2.h  CMakeLists.txt  Contact.cpp  Contact.h  addressbook.cpp  addressbook.h  addressbookv3.cpp  addressbookv3.h  consolemenu.cpp  consolemenu.h  contact.cpp  contact.h  finddialog.cpp  infoview.cpp  infoview.h  main.cpp  mainwindow.cpp  mainwindow.h  product.cpp  product.h  productbook.cpp  productbook.h  productbookwidget.cpp  productbookwidget.h  productlistitem.cpp  productlistitem.h  producttrie.cpp  producttrie.h  productview.cpp  productview.h  repository.cpp  repository.h  searchbarlayout.cpp  searchbarlayout.h  (+6 more)
Data/: Example_2.txt
Model/: basegraphstrategy.cpp  basegraphstrategy.h  basestrategy.h  graphcontext.cpp  graphcontext.h  graphdata.cpp  graphdata.h  repository.cpp  repository.h  strategycontext.cpp  strategyfactory.cpp  strategyfactory.h  vertex.cpp  vertex.h
Model/Strategies/: strategy1.cpp  strategy1.h  topologicalorder.cpp  topologicalorder.h
Test/: CMakeLists.txt  tst_bfs.cpp  tst_bfsseperate.cpp  tst_matrixexponentiation.cpp  tst_reachablematrix.cpp  tst_strategy1.cpp  tst_topologicaorder.cpp
View/: datalistview.cpp  datalistview.h  edgeview.cpp  edgeview.h  graphwidget.cpp  graphwidget.h  listvieweditview.cpp  listvieweditview.h  mainWidget.cpp  mainWidget.h  vertexview.cpp  vertexview.h
data/: 2_sources_in_same_graph.txt  directional_graph.txt  disconnected_graph.txt  infected_vertex_out_of_range.txt  infected_vertex_out_of_range_2.txt  multiple_possible_solutions.txt  multiple_possible_solutions_disconnected_graph.txt  multiple_sources_infect_same_vertex.txt  multiple_sources_infect_same_vertex_2.txt
src/: CMakeLists.txt  main.cpp
src/data/: Example_1.txt  Example_2.txt  Example_3.txt  Example_4.txt  Example_5.txt
src/model/: basestrategy.cpp  basestrategy.h  graphdata.cpp  graphdata.h  repository.cpp  repository.h  strategycontext.cpp  strategycontext.h  strategyfactory.cpp  strategyfactory.h  vertex.cpp  vertex.h
src/model/strategies/: bfs.cpp  bfs.h  bfsseperate.cpp  bfsseperate.h  matrixexponentiation.cpp  matrixexponentiation.h  reachablematrix.cpp  reachablematrix.h  reacheblematrix.cpp  strategy1.cpp  strategy1.h  strategy2.cpp  strategy2.h  topologicalorder.cpp  topologicalorder.h
src/view/: datalistview.cpp  datalistview.h  graphwidget.cpp  graphwidget.h  mainWidget.cpp  mainWidget.h  vertexview.cpp
